--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
   },
   "dependencies": {
     "axios": "^0.15.2",
+    "firebase": "^3.6.5",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
+    "react-geosuggest": "^2.1.0",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "redux-form": "^6.2.0",
